# mado

./: .dockerignore  .env.example  .gitignore  README.md  compose.dev.yaml  compose.prod.yaml  compose.yml  deploy.sh  dev.sh  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
api/: .dockerignore  Dockerfile  auth.test.ts  auth.ts  crypto.test.ts  crypto.ts  db.test.ts  env.test.ts  env.ts  external.ts  index.ts  internal.ts  package-lock.json  package.json  s3.ts  storage.ts  tsconfig.json  vitest.config.ts
api/cron-samples/: README.md  push.sh
api/lib/: originCheck.test.ts  originCheck.ts  storageError.test.ts  storageError.ts  tar-range.test.ts  tar-range.ts  tar-stream.test.ts  tar-stream.ts
api/routes/: _connId.ts  connections.test.ts  connections.ts  hpc.test.ts  hpc.ts  metrics.test.ts  metrics.ts  notes.test.ts  notes.ts  s3-favorites.test.ts  s3-favorites.ts  s3-preview.test.ts  s3-preview.ts  settings.test.ts  settings.ts  sql.test.ts  sql.ts  storage-favorites.test.ts  storage-favorites.ts  storage-list.test.ts  storage-list.ts  (+4 more)
db/: README.md
front/: App.css  App.tsx  Dockerfile  index.css  index.html  main.tsx  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
metrics/: .env.example  README.md  db.py  example.py  miyabi.py  pyproject.toml  runner.py
metrics/config/: miyabi.json
nginx/: Dockerfile  default.conf
server/: auth.test.ts  db.test.ts  db.ts  env.test.ts  index.ts  tsconfig.json
src/: App.css  index.css
(+126 files in other folders)
