# メトリクスコレクター用の pyproject。
#
# 用途: ローカルで `uv run runner.py config/miyabi.json --once` のような
# 形で動かすため。`uv sync` を前提とし、依存は .venv にインストールする。
#
# Python 最低バージョンは deploy 先 (Miyabi 等) の最低ラインに合わせて 3.8。
# ライブラリとして配布はしないので build は要求しない (tool.uv.package = false)。
[project]
name = "mado-metrics"
version = "0.1.0"
description = "Mado ダッシュボード向けメトリクスコレクター (任意ホストから push する Python スクリプト集)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv>=1.0",
]

[tool.uv]
package = false
